# tree-sitter-rune

./: .tool-versions  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  setup.py  test.rune  tree-sitter.json
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  release.yml
bindings/c/: tree-sitter-rune.pc.in
bindings/c/tree_sitter/: tree-sitter-rune.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_rune/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterRuneTests/: TreeSitterRuneTests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: closure.txt  compound_assignment.txt  enum.txt  expression.txt  function.txt  if_expression.txt  impl.txt  labeled_loop.txt  labeled_loop_statement.txt  loop.txt  loop_statement.txt  match.txt  match_extended.txt  match_fixes.txt  match_object.txt  modules.txt  object.txt  precedence.txt  primitive.txt  range.txt  return_statement.txt  struct.txt  template_literal.txt  try_operator.txt  tuple.txt  use_declaration.txt  variable.txt  vector.txt  visibility.txt
