[package]
name = "tree-sitter-rune"
description = "Rune grammar for tree-sitter"
version = "0.0.1"
authors = ["Zhuhao Wang <zhuhaow@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "rune"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/zhuhaow/tree-sitter-rune"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.7"
